# otus_smart_house

./: Cargo.toml
examples/: main.rs  sh_full_web.rs  sh_web.rs
src/: devices.rs  lib.rs  main.rs  smarthouse.rs  smartroom.rs
