[package]
name = "smarthouse_web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.53"
actix-web = "4.4.0"
serde = { version = "1.0.189", features = ["derive"] }
log = "0.4.20"
tokio = { version = "1.33.0", features = ["full"] }